--- a/src/pages/ChannelsDetail/pages/About/style.scss
+++ b/src/pages/ChannelsDetail/pages/About/style.scss
@@ -3,7 +3,7 @@
     height: auto;
     padding: 12px 0;
     h6 {
-        color: #FFF;
+        color: var(--textColor);
         margin-bottom: 20px;
         /* Poppins/28/Medium */
         font-family: Poppins;
