--- a/src/pages/ChannelsDetail/pages/ChannelsVideos/style.scss
+++ b/src/pages/ChannelsDetail/pages/ChannelsVideos/style.scss
@@ -4,7 +4,7 @@
     padding: 12px 0;
 
     h6 {
-        color: #FFF;
+        color: var(--textColor);
         margin-bottom: 20px;
         /* Poppins/28/Medium */
         font-family: Poppins;
