--- a/src/pages/Chat/style.scss
+++ b/src/pages/Chat/style.scss
@@ -884,6 +884,13 @@ button.back__top{
      }
     }
   }
+
+  .chat_section {
+    button{
+      padding:  12px;
+
+    }
+  }
 }
 
 @keyframes showMessages {
