--- a/src/style.scss
+++ b/src/style.scss
@@ -288,7 +288,7 @@ input[type="number"] {
  }
 
 
-  .stroke__change{
+  .stroke__change, .write__message{
     svg, path{
       stroke: #626262;
     }
