--- a/src/pages/Profile/pages/Favorites/style.scss
+++ b/src/pages/Profile/pages/Favorites/style.scss
@@ -26,7 +26,7 @@
         gap: 8px;
         border-radius: 16px;
         border: 1px solid var(--Gray-400, #292929);
-        color: var(--Neutral-White, #FFF);
+        color: var(--textColor);
         background-color: transparent;
         /* Poppins/16/Medium */
         font-family: Poppins;
