--- a/src/pages/Profile/pages/LikedVideos/style.scss
+++ b/src/pages/Profile/pages/LikedVideos/style.scss
@@ -6,7 +6,7 @@
         gap: 5px 15px;
     }
     h1 {
-        color: #FFF;
+        color: var(--textColor);
         /* Poppins/28/Medium */
         font-family: Poppins;
         font-size: 28px;
