--- a/src/pages/Profile/pages/MyVideos/style.scss
+++ b/src/pages/Profile/pages/MyVideos/style.scss
@@ -8,7 +8,7 @@
     gap: 5px 15px;
   }
   h1 {
-    color: #fff;
+    color: var(--textColor);
 
     /* Poppins/28/Medium */
     font-family: Poppins;
