fixed otp problem and delete account

--- a/src/pages/Settings/components/Password/style.scss
+++ b/src/pages/Settings/components/Password/style.scss
@@ -48,7 +48,7 @@
         height: 100%;
         width: 100%;
         border: none;
-        border: 1px solid var(--Gray-400, #292929);
+        border: 1px solid var(--Gray-400, #7e7e7e);
         background-color: transparent !important;
         border-radius: 16px;
         outline: none;
