--- a/src/pages/Settings/components/ProfileInfo/style.scss
+++ b/src/pages/Settings/components/ProfileInfo/style.scss
@@ -157,7 +157,7 @@
       input {
         width: 100%;
         border: none;
-        border: 1px solid var(--Gray-400, #292929);
+        border: 1px solid var(--Gray-400, #7e7e7e);
         background-color: transparent !important;
         border-radius: 16px;
         outline: none;
@@ -173,7 +173,7 @@
       textarea {
         width: 100%;
         border: none;
-        border: 1px solid var(--Gray-400, #292929);
+        border: 1px solid var(--Gray-400, #7e7e7e);
         background-color: transparent !important;
         border-radius: 16px;
         outline: none;
