--- a/src/components/ProfileMenu/style.scss
+++ b/src/components/ProfileMenu/style.scss
@@ -124,7 +124,9 @@
       transition: all 0.3s ease;
       border-radius: 12px;
       text-decoration: none;
-
+      &.mode__switcher{
+        padding-right: 14px;
+      }
       &:hover {
         background: var(--primaryColor);
 
@@ -257,5 +259,182 @@
         }
       }
     }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+/* From Uiverse.io by JkHuger */ 
+.switch {
+  position: relative;
+  width: 43.33px; /* 130px / 3 */
+  height: 16.67px; /* 50px / 3 */
+  margin: 0px;
+  appearance: none;
+  -webkit-appearance: none;
+  background-color: rgb(4,52,73);
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 8.33px; /* 25px / 3 */
+  transition: background-image .7s ease-in-out;
+  outline: none;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.switch:checked {
+  background-color: rgb(0, 195, 255);
+  background-size: cover;
+  transition: background-image 1s ease-in-out;
+}
+
+.switch:after {
+  content: '';
+  width: 15.33px; /* 46px / 3 */
+  height: 15.33px; /* 46px / 3 */
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  left: 0.67px; /* 2px / 3 */
+  top: 0.67px; /* 2px / 3 */
+  transform: translateX(0px);
+  animation: off .7s forwards cubic-bezier(.8, .5, .2, 1.4);
+  box-shadow: inset 1.67px -1.67px 1.33px rgba(53, 53, 53, 0.3); /* 5px, -5px, 4px / 3 */
+}
+
+@keyframes off {
+  0% {
+    transform: translateX(26.67px); /* 80px / 3 */
+    width: 15.33px; /* 46px / 3 */
+  }
+
+  50% {
+    width: 25px; /* 75px / 3 */
+    border-radius: 8.33px; /* 25px / 3 */
+  }
+
+  100% {
+    transform: translateX(0px);
+    width: 15.33px; /* 46px / 3 */
+  }
+}
+
+.switch:checked:after {
+  animation: on .7s forwards cubic-bezier(.8, .5, .2, 1.4);
+  box-shadow: inset -1.67px -1.67px 1.33px rgba(53, 53, 53, 0.3); /* -5px, -5px, 4px / 3 */
+}
+
+@keyframes on {
+  0% {
+    transform: translateX(0px);
+    width: 15.33px; /* 46px / 3 */
+  }
+
+  50% {
+    width: 25px; /* 75px / 3 */
+    border-radius: 8.33px; /* 25px / 3 */
+  }
+
+  100% {
+    transform: translateX(26.67px); /* 80px / 3 */
+    width: 15.33px; /* 46px / 3 */
+  }
+}
+
+.switch:checked:before {
+  content: '';
+  width: 5px; /* 15px / 3 */
+  height: 5px; /* 15px / 3 */
+  border-radius: 50%;
+  position: absolute;
+  left: 5px; /* 15px / 3 */
+  top: 1.67px; /* 5px / 3 */
+  transform-origin: 17.67px 3.33px; /* 53px, 10px / 3 */
+  background-color: transparent;
+  box-shadow: 1.67px -0.33px 0px #fff; /* 5px -1px 0px / 3 */
+  filter: blur(0px);
+  animation: sun .7s forwards ease;
+}
+
+@keyframes sun {
+  0% {
+    transform: rotate(170deg);
+    background-color: transparent;
+    box-shadow: 1.67px -0.33px 0px #fff; /* 5px -1px 0px / 3 */
+    filter: blur(0px);
+  }
+
+  50% {
+    background-color: transparent;
+    box-shadow: 1.67px -0.33px 0px #fff; /* 5px -1px 0px / 3 */
+    filter: blur(0px);
+  }
+
+  90% {
+    background-color: #f5daaa;
+    box-shadow: 0px 0px 3.33px #f5deb4, /* 10px / 3 */
+    0px 0px 6.67px #f5deb4, /* 20px / 3 */
+    0px 0px 10px #f5deb4, /* 30px / 3 */
+     inset 0px 0px 0.67px #efd3a3; /* 2px / 3 */
+    filter: blur(0.33px); /* 1px / 3 */
+  }
+
+  100% {
+    transform: rotate(0deg);
+    background-color: #f5daaa;
+    box-shadow: 0px 0px 3.33px #f5deb4, /* 10px / 3 */
+    0px 0px 6.67px #f5deb4, /* 20px / 3 */
+    0px 0px 10px #f5deb4, /* 30px / 3 */
+     inset 0px 0px 0.67px #efd3a3; /* 2px / 3 */
+    filter: blur(0.33px); /* 1px / 3 */
+  }
+}
+
+.switch:before {
+  content: '';
+  width: 5px; /* 15px / 3 */
+  height: 5px; /* 15px / 3 */
+  border-radius: 50%;
+  position: absolute;
+  left: 5px; /* 15px / 3 */
+  top: 1.67px; /* 5px / 3 */
+  filter: blur(0.33px); /* 1px / 3 */
+  background-color: #f5daaa;
+  box-shadow: 0px 0px 3.33px #f5deb4, /* 10px / 3 */
+  0px 0px 6.67px #f5deb4, /* 20px / 3 */
+  0px 0px 10px #f5deb4, /* 30px / 3 */
+   inset 0px 0px 0.67px #efd3a3; /* 2px / 3 */
+  transform-origin: 17.67px 3.33px; /* 53px, 10px / 3 */
+  animation: moon .7s forwards ease;
+}
+
+@keyframes moon {
+  0% {
+    transform: rotate(0deg);
+    filter: blur(0.33px); /* 1px / 3 */
+  }
+
+  50% {
+    filter: blur(0.33px); /* 1px / 3 */
+  }
+
+  90% {
+    background-color: transparent;
+    box-shadow: 1.67px -0.33px 0px #fff; /* 5px -1px 0px / 3 */
+    filter: blur(0px);
+  }
+
+  100% {
+    transform: rotate(170deg);
+    background-color: transparent;
+    box-shadow: 1.67px -0.33px 0px #fff; /* 5px -1px 0px / 3 */
+    filter: blur(0px);
   }
 }
