--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -102,6 +102,7 @@ header {
     position: relative;
     cursor: pointer;
   }
+ 
 
   .notification-options {
     position: absolute;
@@ -118,16 +119,8 @@ header {
     border-radius: 20px;
     border: 1px solid var(--Text-14, #16181d);
     background: var(--backgroundColor);
-
-    .ntf_content {
-      width: 100%;
-      height: auto;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 10px 0;
-    }
+    cursor: default;
+  
 
     h1 {
       color: var(--textColor, #fff);
@@ -143,8 +136,8 @@ header {
     }
 
     img {
-      width: 40% !important;
-      height: auto !important;
+      width: 40%;
+      height: auto ;
     }
   }
 }
@@ -215,6 +208,53 @@ header {
   .logo {
     max-width: 148px;
   }
+
+  
+  .sm__ntf__dropdown{
+    position: relative;
+    .notification-options {
+      position: absolute;
+      top: 100%;
+      right: 0;
+      margin-top: 20px;
+      display: flex;
+      width: 384px;
+      height: auto;
+      padding: 24px 24px 48px 24px;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      border-radius: 20px;
+      border: 1px solid var(--Text-14, #16181d);
+      background: var(--backgroundColor);
+      cursor: default;
+      z-index: 99999;
+    
+  
+      h1 {
+        color: var(--textColor, #fff);
+  
+        /* Poppins/20/SemiBold */
+        font-family: Poppins;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 28px;
+        /* 140% */
+        text-align: start !important;
+      }
+  
+      img {
+        width: 40%;
+        height: auto ;
+      }
+    }
+
+    .medium__dropdown{
+      display: none;
+    }
+  }
+  
 
   .top_section {
     button {
@@ -617,7 +657,26 @@ header {
     display: block;
   }
 
+  .sm_header .sm__ntf__dropdown .notification-options{
+    width: 300px;
+    .ntf__item {
+      .user__avatar img{
+        width: 30px;
+        height: 30px;
+      }
+    }
+    .ntf__text{
+      h3{
+        font-size: 14px;
 
+      }
+    }
+    .ntf__video {
+      img{
+        width: 70px;
+      }
+    }
+  }
 
 
 
