--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -45,7 +45,7 @@ header {
   }
 
   .content_left {
-    .upload {
+    .upload , .ntf__button{
       padding: 10px;
       border-radius: 16px;
       border: 1px solid var(--primaryColor);
@@ -101,6 +101,10 @@ header {
   .ntf {
     position: relative;
     cursor: pointer;
+    button{
+      border: 0;
+      background: none;
+    }
   }
  
 
