--- a/src/components/ProfileMenu/style.scss
+++ b/src/components/ProfileMenu/style.scss
@@ -5,7 +5,8 @@
 // }
 .mantine-Menu-dropdown {
   display: flex;
-  width: 340px !important;
+  width: 100%;
+  min-width: 340px !important;
   height: auto;
   flex-direction: column !important;
   justify-content: center !important;
@@ -29,10 +30,10 @@
       width: 100%;
       height: auto;
       display: flex;
-      justify-content: space-between;
-
+      justify-content: start;
+      align-items: center;
+      margin: 0 0 15px 0;
       .profile-image {
-        width: 20%;
         height: auto;
 
         img {
@@ -43,7 +44,7 @@
       }
 
       .user-name {
-        width: 80%;
+        margin: 0 0 0 10px;
         height: auto;
         display: flex;
         flex-direction: column;
@@ -52,7 +53,6 @@
 
         .name {
           color: var(--textColor);
-
           /* Poppins/20/SemiBold */
           font-family: Poppins;
           font-size: 20px;
@@ -65,10 +65,10 @@
 
         p {
           color: var(--Text-5, #979eaf);
-
+          margin: 0;
           /* Poppins/16/Regular */
           font-family: Poppins;
-          font-size: 16px;
+          font-size: 14px;
           font-style: normal;
           font-weight: 400;
           line-height: 20px;
