--- a/src/pages/Home/components/ShortCards/style.scss
+++ b/src/pages/Home/components/ShortCards/style.scss
@@ -20,7 +20,7 @@
     color: #f6f3f4;
 
     /* Poppins/16/SemiBold */
-    font-family: Poppins;
+    font-family: inherit;
     font-size: 13px;
     font-style: normal;
     font-weight: 400;
