--- a/src/pages/TopVideos/style.scss
+++ b/src/pages/TopVideos/style.scss
@@ -24,7 +24,7 @@
 
 
 .modal__body{
-  .ant-modal-content{
+  .modal-content{
     border: 1px solid var(--Gray-400, #292929);
     background: var(--backgroundColor);
     color: var(--textColor);
