--- a/src/pages/Chat/style.scss
+++ b/src/pages/Chat/style.scss
@@ -441,7 +441,7 @@
           opacity: .8;
 
           /* Poppins/16/SemiBold */
-          font-family: Poppins;
+          font-family: inherit;
           font-size: 16px;
           font-style: normal;
           font-weight: 600;
@@ -456,7 +456,7 @@
           white-space: nowrap;
           
           /* Poppins/14/Regular */
-          font-family: Poppins;
+          font-family: inherit;
           font-size: 14px;
           font-style: normal;
           font-weight: 400;
@@ -520,7 +520,7 @@
       color: var(--textColor);
       opacity: .7;
       /* Poppins/20/SemiBold */
-      font-family: Poppins;
+      font-family: inherit;
       font-size: clamp(16px, 3vw, 20px);
       font-style: normal;
       font-weight: 600;
